Setup with mongodb

--- a/.env.local
+++ b/.env.local
@@ -2,3 +2,4 @@ GROQ_API_KEY=""
 UPSTASH_REDIS_REST_URL=""
 UPSTASH_REDIS_REST_TOKEN=""
 DATA_API_KEY = ""
+MONGODB_URI = "mongodb+srv://sethjtdewhitt:3p4xYIIqi8Y67mSF@cluster0.dho16.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
