--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "groq-sdk": "^0.9.0",
+    "mongodb": "^6.12.0",
     "next": "15.0.4",
     "prettier": "^3.4.2",
     "react": "^19.0.0",
