MONGODB_URI setup

--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
-GROQ_API_KEY=""
+GROQ_API_KEY="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"
 UPSTASH_REDIS_REST_URL=""
 UPSTASH_REDIS_REST_TOKEN=""
-DATA_API_KEY = ""
+#DATA_API_KEY = ""
 MONGODB_URI = "mongodb+srv://sethjtdewhitt:3p4xYIIqi8Y67mSF@cluster0.dho16.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
