--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "format:fix": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
   },
   "dependencies": {
+    "cheerio": "^1.0.0",
     "groq-sdk": "^0.9.0",
     "mongodb": "^6.12.0",
     "next": "15.0.4",
     "prettier": "^3.4.2",
+    "puppeteer": "^23.10.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
