--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format:fix": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
   },
   "dependencies": {
+    "@next/font": "^14.2.15",
     "cheerio": "^1.0.0",
     "groq-sdk": "^0.9.0",
     "mongodb": "^6.12.0",
@@ -17,7 +18,9 @@
     "prettier": "^3.4.2",
     "puppeteer": "^23.10.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
