--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@next/font": "^14.2.15",
+    "@upstash/ratelimit": "^2.0.5",
     "cheerio": "^1.0.0",
     "groq-sdk": "^0.9.0",
     "mongodb": "^6.12.0",
