--- a/package.json
+++ b/package.json
@@ -24,9 +24,15 @@
     "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/debug": "^4.1.12",
+    "@types/estree": "^1.0.6",
+    "@types/estree-jsx": "^1.0.5",
+    "@types/hast": "^3.0.4",
+    "@types/mdast": "^4.0.4",
+    "@types/node": "^20.17.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/unist": "^3.0.3",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
     "postcss": "^8",
