Working on storing data + shareable links

--- a/.env.local
+++ b/.env.local
@@ -2,4 +2,4 @@ GROQ_API_KEY="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"
 UPSTASH_REDIS_REST_URL="https://intense-condor-24159.upstash.io"
 UPSTASH_REDIS_REST_TOKEN='AV5fAAIjcDFlMjJmODU5OGJlNjY0MTZkYTc4ZTZiMTE2ZmJhZDJiN3AxMA'
 #DATA_API_KEY = ""
-#MONGODB_URI = "mongodb+srv://sethjtdewhitt:3p4xYIIqi8Y67mSF@cluster0.dho16.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGODB_URI = "mongodb+srv://sethjtdewhitt:3p4xYIIqi8Y67mSF@cluster0.dho16.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
