--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/estree-jsx": "^1.0.5",
     "@types/hast": "^3.0.4",
     "@types/mdast": "^4.0.4",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^20.17.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
